{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "27ec5a78-d67e-444c-b755-e6cd0de11240",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "49c0ac53-1c81-4d7e-a900-7e641b8d672c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rewind",
                    "type": "Button",
                    "id": "5c9c737a-5120-4d22-9704-b74d9941213e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "48100679-5d2b-421d-86ac-d1e2264c3e38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "9994a214-78cc-4e09-b1fe-d0b9a276d27d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAtkCharge",
                    "type": "Button",
                    "id": "a72ad15a-9211-4229-909c-c6c1f6a2c3f0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TakeDamageTest",
                    "type": "Button",
                    "id": "ae7ac6ba-9ee0-49a8-a725-417e66836976",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAtkRelease",
                    "type": "Button",
                    "id": "ce789060-f5f3-49ec-887e-3dced18e429e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "30af3cc4-f681-41eb-a8e8-5befa9164c57",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0e52bf16-6571-45b1-9ef9-fd6ba493ce4d",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Rewind",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "55c1e31b-6435-4965-9ed9-69ae9cb1c36c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Tap(pressPoint=1)",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Move",
                    "id": "d98582d6-e965-4d11-b68b-91f14bea5395",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "689b8c9d-621b-4ebe-a93f-2a9af1bf6c71",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8b8cd9e6-9af6-4dec-8cea-072ac971a621",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1c6f35f6-ac47-496e-9730-3c3f776ae8bb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "90f19ad4-0815-4c7e-abc4-afe64f54159b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "07ca5504-66f5-49b0-93b0-92b501977523",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc646fe4-7963-4d8b-b24d-b795c579687a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=0.4)",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "HeavyAtkCharge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25da1054-6790-4716-8997-64635595c41f",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "TakeDamageTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cef6dd00-3ca5-405a-843d-381be4c35f7a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "SlowTap(duration=0.35)",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAtkRelease",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f1d8622a-1ebb-4aed-9dc7-458936bde30f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "e84cbbcc-29cf-4f15-afcb-4f57c9eed826",
            "actions": [
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "08fd428f-bee8-440f-b855-4c799671dd72",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ef4c8178-0a19-43e9-8239-1949444259ab",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": []
        }
    ]
}